2004-11-03  Don Porter  <dgp@users.sourceforge.net>

	* tests/button.test: Update expected results to account for more
	verbose errorinfo from errors in variable traces [Tcl Bug 572164]

2004-11-01  Don Porter  <dgp@users.sourceforge.net>

	* tests/dialog.test (dialog-1.1): Update expected result to changes
	in the error messages produced by procs.

2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/wm.test: Add Win32 test cases for attributes
	subcommand.
	* win/tkWinWm.c (WmAttributesCmd): Fixup broken
	option processing logic for attributes subcommand.

2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWin32Dll.c (DllMain, _except_dllmain_detach_handler):
	Rework pushing of exception handler function pointer
	so that compiling with gcc -O3 works. Remove empty
	function call to avoid compiler warning. Mark the
	DllMain function as noinline to avoid compiler
	error from duplicated asm labels in generated code.

2004-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixScale.c (DisplayHorizontalValue): Fix for #220927 by 
	Michael Schlenker to keep the labels within the window.
	
2004-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/*.n: Assorted minor documentation fixes.

2004-10-26  David Gravereaux <davygrvy@pobox.com>

	* win/tkWinX.c:		     Signature for tkWinXCleanup needed to be
	* generic/tkInt.decls:       changed so it matches the Tcl_ExitProc
	* generic/tkIntPlatDecls.h:  typedef to avoid a bad-style cast.

	* win/makefile.vc: Force TCL_LIBRARY envar when calling tclsh

2004-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinRegion.c (TkpBuildRegionFromAlphaData): Fixed syntax error
	* generic/tkImgPhoto.c (Tk_PhotoPutBlock): Removed unreferences vars.
	

2004-10-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* macosx/tkMacOSXRegion.c (TkpBuildRegionFromAlphaData):
	* win/tkWinRegion.c (TkpBuildRegionFromAlphaData): Factor out the