@@ -11,7 +11,7 @@ exec wish "$0" "$@"
 # ".tcl" files is this directory, which are sourced by this script
 # as needed.
 #
-# RCS: @(#) $Id: widget,v 1.24 2004/09/10 12:13:43 vincentdarley Exp $
+# RCS: @(#) $Id: widget,v 1.25 2004/11/07 17:28:21 dkf Exp $
 
 package require Tcl	8.5
 package require Tk	8.5
@@ -326,6 +326,9 @@ addDemoSection "Common Dialogs" {
     msgbox	"Message boxes"
     filebox	"File selection dialog"
     clrpick	"Color picker"
+}
+addDemoSection "Animation" {
+    anilabel	"Animated labels"
 }
 addDemoSection "Miscellaneous" {
     bitmap	"The built-in bitmaps"
