@@ -1,3 +1,8 @@
+2004-11-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* library/demos/anilabel.tcl: Added a simple demonstration of how
+	to do animation using Tcl/Tk to the widget demo.
+
 2004-11-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/button.test: Update expected results to account for more
